@@ -314,6 +314,7 @@ importFrom(BiocGenerics,cbind)
 importFrom(BiocGenerics,colnames)
 importFrom(BiocGenerics,do.call)
 importFrom(BiocGenerics,setdiff)
+importFrom(R.utils,isAbsolutePath)
 importFrom(RJSONIO,fromJSON)
 importFrom(RJSONIO,isValidJSON)
 importFrom(RJSONIO,toJSON)
